# kagent-test

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/platform_api/: config.py  gateway.py  k8s.py  kagent_client.py  main.py  mappers.py  mcp_probe.py  oci.py  schemas.py
apps/api/src/platform_api/routers/: agents.py  catalog.py  environments.py  mcp_servers.py  model_configs.py  skills.py
apps/api/tests/: conftest.py  test_catalog.py  test_direction_features.py  test_gateway.py  test_k8s_replace_retry.py  test_kagent_client.py  test_main.py  test_mappers.py  test_phase4.py  test_routers_agents.py  test_routers_mcp_servers.py  test_routers_model_configs.py  test_skill_upload.py
apps/portal/: Dockerfile  README.md  package-lock.json  package.json
apps/portal/app/: globals.css  layout.tsx  page.tsx
apps/portal/components/: AgentCardViewer.tsx  AgentDetail.tsx  AgentEditLoader.tsx  AgentForm.tsx  (+11 more)
docs/: local-registry.md  phase-0.md  phase-3.md
docs/design/: open-agents-shell.html
examples/: README.md
examples/agents/: hello-agent.yaml
examples/byo-echo-agent/: Dockerfile  main.py
examples/gateway/: agentgateway-gateway.yaml  llm-egress.yaml  mcp-catalog-route.yaml
examples/mcp-server/: mcpserver.yaml
infra/agentgateway/: values.yaml
infra/argocd/: root-app.yaml
infra/kagent/: values.yaml
infra/kmcp/: values.yaml
infra/observability/: agentgateway-tracing.yaml  jaeger.yaml
infra/platform/: platform-api.yaml  platform-portal.yaml
scripts/: smoke.sh
(+21 files in other folders)
