[project]
name = "agents-platform"
version = "0.1.0"
description = "Agents Platform monorepo — virtual uv workspace root (no code of its own)"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"
